// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BotGameScreen — snapshots renders board and controls with DARK theme (snapshot) 1`] = `
<View
  style={
    {
      "backgroundColor": "#16213e",
      "flex": 1,
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#1a1a2e",
        "flexDirection": "row",
        "gap": 12,
        "paddingHorizontal": 16,
        "paddingVertical": 8,
      }
    }
  >
    <Text
      style={
        {
          "color": "#e2e8f0",
          "fontSize": 15,
          "fontWeight": "bold",
        }
      }
    >
      🤖 Bot (
      intermediate
      )
    </Text>
  </View>
  <View
    style={
      {
        "aspectRatio": 1,
        "width": "100%",
      }
    }
  />
  <View
    style={
      {
        "backgroundColor": "#1a1a2e",
        "flexDirection": "row",
        "gap": 8,
        "padding": 8,
      }
    }
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": true,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={false}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#0f3460",
          "borderRadius": 8,
          "flex": 1,
          "opacity": 1,
          "padding": 12,
        }
      }
    >
      <Text
        style={
          [
            {
              "color": "#e2e8f0",
              "fontSize": 13,
            },
            {
              "opacity": 0.4,
            },
          ]
        }
      >
        ↩ Undo
      </Text>
    </View>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#fc8181",
          "borderRadius": 8,
          "flex": 1,
          "opacity": 1,
          "padding": 12,
        }
      }
    >
      <Text
        style={
          {
            "color": "#e2e8f0",
            "fontSize": 13,
          }
        }
      >
        🏳 Resign
      </Text>
    </View>
  </View>
</View>
`;

exports[`ReviewScreen — snapshots renders game summary with DARK theme (snapshot) 1`] = `
<RCTScrollView
  contentContainerStyle={
    {
      "padding": 16,
      "paddingBottom": 40,
    }
  }
  style={
    {
      "backgroundColor": "#16213e",
      "flex": 1,
    }
  }
>
  <View>
    <View
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#0f3460",
          "borderRadius": 16,
          "marginBottom": 16,
          "padding": 20,
        }
      }
    >
      <Text
        style={
          {
            "color": "#fbd38d",
            "fontSize": 40,
            "fontWeight": "bold",
            "marginBottom": 4,
          }
        }
      >
        1-0
      </Text>
      <Text
        style={
          {
            "color": "#e2e8f0",
            "fontSize": 16,
            "marginBottom": 4,
          }
        }
      >
        White wins
      </Text>
      <Text
        style={
          {
            "color": "#a0aec0",
            "fontSize": 14,
            "marginBottom": 4,
          }
        }
      >
        Alice
         vs 
        Bob
      </Text>
      <Text
        style={
          {
            "color": "#718096",
            "fontSize": 13,
          }
        }
      >
        2
         moves · 
        11/14/2023
      </Text>
    </View>
    <View
      style={
        {
          "backgroundColor": "#0f3460",
          "borderRadius": 12,
          "marginBottom": 16,
          "padding": 16,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "space-between",
            "marginBottom": 12,
          }
        }
      >
        <Text
          style={
            {
              "color": "#e2e8f0",
              "fontSize": 16,
              "fontWeight": "bold",
            }
          }
        >
          Board Position
        </Text>
        <Text
          style={
            {
              "color": "#a0aec0",
              "fontSize": 13,
            }
          }
        >
          Move 2 / 2
        </Text>
      </View>
      <View
        style={
          {
            "flexDirection": "row",
            "gap": 12,
            "justifyContent": "center",
            "marginBottom": 10,
            "marginTop": 14,
          }
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#4299e1",
              "borderRadius": 8,
              "justifyContent": "center",
              "minWidth": 52,
              "opacity": 1,
              "paddingHorizontal": 18,
              "paddingVertical": 10,
            }
          }
        >
          <Text
            style={
              {
                "color": "#fff",
                "fontSize": 18,
                "fontWeight": "bold",
              }
            }
          >
            ⏮
          </Text>
        </View>
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#4299e1",
              "borderRadius": 8,
              "justifyContent": "center",
              "minWidth": 52,
              "opacity": 1,
              "paddingHorizontal": 18,
              "paddingVertical": 10,
            }
          }
        >
          <Text
            style={
              {
                "color": "#fff",
                "fontSize": 18,
                "fontWeight": "bold",
              }
            }
          >
            ◀
          </Text>
        </View>
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": true,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={false}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#0f3460",
              "borderRadius": 8,
              "justifyContent": "center",
              "minWidth": 52,
              "opacity": 0.5,
              "paddingHorizontal": 18,
              "paddingVertical": 10,
            }
          }
        >
          <Text
            style={
              {
                "color": "#fff",
                "fontSize": 18,
                "fontWeight": "bold",
              }
            }
          >
            ▶
          </Text>
        </View>
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": true,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={false}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#0f3460",
              "borderRadius": 8,
              "justifyContent": "center",
              "minWidth": 52,
              "opacity": 0.5,
              "paddingHorizontal": 18,
              "paddingVertical": 10,
            }
          }
        >
          <Text
            style={
              {
                "color": "#fff",
                "fontSize": 18,
                "fontWeight": "bold",
              }
            }
          >
            ⏭
          </Text>
        </View>
      </View>
      <RCTScrollView
        contentContainerStyle={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 4,
            "paddingVertical": 4,
          }
        }
        horizontal={true}
        showsHorizontalScrollIndicator={false}
        style={
          {
            "marginBottom": 4,
            "marginTop": 4,
          }
        }
      >
        <View>
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "alignItems": "center",
                "backgroundColor": "#0f3460",
                "borderRadius": 6,
                "height": 32,
                "justifyContent": "center",
                "opacity": 1,
                "width": 32,
              }
            }
          >
            <Text
              style={
                [
                  {
                    "color": "#a0aec0",
                    "fontSize": 11,
                    "fontWeight": "600",
                  },
                  false,
                ]
              }
            >
              ▲
            </Text>
          </View>
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "alignItems": "center",
                "backgroundColor": "#0f3460",
                "borderRadius": 6,
                "height": 32,
                "justifyContent": "center",
                "opacity": 1,
                "width": 32,
              }
            }
          >
            <Text
              style={
                [
                  {
                    "color": "#a0aec0",
                    "fontSize": 11,
                    "fontWeight": "600",
                  },
                  false,
                ]
              }
            >
              1
            </Text>
          </View>
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "alignItems": "center",
                "backgroundColor": "#4299e1",
                "borderRadius": 6,
                "height": 32,
                "justifyContent": "center",
                "opacity": 1,
                "width": 32,
              }
            }
          >
            <Text
              style={
                [
                  {
                    "color": "#a0aec0",
                    "fontSize": 11,
                    "fontWeight": "600",
                  },
                  {
                    "color": "#fff",
                  },
                ]
              }
            >
              2
            </Text>
          </View>
        </View>
      </RCTScrollView>
    </View>
    <View
      style={
        {
          "backgroundColor": "#0f3460",
          "borderRadius": 12,
          "marginBottom": 16,
          "padding": 16,
        }
      }
    >
      <Text
        style={
          {
            "color": "#e2e8f0",
            "fontSize": 16,
            "fontWeight": "bold",
            "marginBottom": 12,
          }
        }
      >
        Moves
      </Text>
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 4,
            "marginBottom": 4,
          }
        }
      >
        <Text
          style={
            {
              "color": "#a0aec0",
              "fontSize": 14,
              "minWidth": 28,
            }
          }
        >
          1
          .
        </Text>
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "borderRadius": 4,
              "minWidth": 64,
              "opacity": 1,
              "paddingHorizontal": 4,
              "paddingVertical": 2,
            }
          }
        >
          <Text
            style={
              [
                {
                  "color": "#e2e8f0",
                  "fontSize": 14,
                },
                false,
              ]
            }
          >
            e4
          </Text>
        </View>
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "backgroundColor": "#1a1a2e",
              "borderRadius": 4,
              "minWidth": 64,
              "opacity": 1,
              "paddingHorizontal": 4,
              "paddingVertical": 2,
            }
          }
        >
          <Text
            style={
              [
                {
                  "color": "#e2e8f0",
                  "fontSize": 14,
                },
                {
                  "color": "#fbd38d",
                  "fontWeight": "bold",
                },
              ]
            }
          >
            e5
          </Text>
        </View>
      </View>
    </View>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#4299e1",
          "borderRadius": 12,
          "marginBottom": 12,
          "opacity": 1,
          "padding": 16,
        }
      }
    >
      <Text
        style={
          {
            "color": "#fff",
            "fontSize": 16,
            "fontWeight": "bold",
          }
        }
      >
        ↑ Share PGN
      </Text>
    </View>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#0f3460",
          "borderRadius": 12,
          "marginBottom": 12,
          "opacity": 1,
          "padding": 16,
        }
      }
    >
      <Text
        style={
          {
            "color": "#fff",
            "fontSize": 16,
            "fontWeight": "bold",
          }
        }
      >
        ⎘ Copy PGN
      </Text>
    </View>
  </View>
</RCTScrollView>
`;

exports[`StartGameScreen — snapshots renders game-mode menu with DARK theme (snapshot) 1`] = `
<View
  style={
    {
      "backgroundColor": "#16213e",
      "flex": 1,
      "padding": 20,
    }
  }
>
  <Text
    style={
      {
        "color": "#e2e8f0",
        "fontSize": 22,
        "fontWeight": "bold",
        "marginBottom": 20,
        "marginTop": 8,
      }
    }
  >
    Choose Mode
  </Text>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "opacity": 1,
        "position": "absolute",
        "right": 16,
        "top": 12,
      }
    }
  >
    <Text
      style={
        {
          "color": "#718096",
          "fontSize": 22,
        }
      }
    >
      ⚙
    </Text>
  </View>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "backgroundColor": "#0f3460",
        "borderRadius": 16,
        "marginBottom": 16,
        "opacity": 1,
        "padding": 20,
      }
    }
  >
    <Text
      style={
        {
          "fontSize": 36,
          "marginBottom": 8,
        }
      }
    >
      📷
    </Text>
    <Text
      style={
        {
          "color": "#e2e8f0",
          "fontSize": 20,
          "fontWeight": "bold",
          "marginBottom": 4,
        }
      }
    >
      Over the Board
    </Text>
    <Text
      style={
        {
          "color": "#a0aec0",
          "fontSize": 14,
          "lineHeight": 20,
        }
      }
    >
      Scan a physical chessboard and track the game automatically
    </Text>
  </View>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "backgroundColor": "#0f3460",
        "borderRadius": 16,
        "marginBottom": 16,
        "opacity": 1,
        "padding": 20,
      }
    }
  >
    <Text
      style={
        {
          "fontSize": 36,
          "marginBottom": 8,
        }
      }
    >
      🤖
    </Text>
    <Text
      style={
        {
          "color": "#e2e8f0",
          "fontSize": 20,
          "fontWeight": "bold",
          "marginBottom": 4,
        }
      }
    >
      Play vs Bot
    </Text>
    <Text
      style={
        {
          "color": "#a0aec0",
          "fontSize": 14,
          "lineHeight": 20,
        }
      }
    >
      Play on-screen against the computer — works offline
    </Text>
  </View>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "backgroundColor": "#0f3460",
        "borderRadius": 16,
        "marginBottom": 16,
        "opacity": 1,
        "padding": 20,
      }
    }
  >
    <Text
      style={
        {
          "fontSize": 36,
          "marginBottom": 8,
        }
      }
    >
      🌐
    </Text>
    <Text
      style={
        {
          "color": "#e2e8f0",
          "fontSize": 20,
          "fontWeight": "bold",
          "marginBottom": 4,
        }
      }
    >
      Multiplayer
    </Text>
    <Text
      style={
        {
          "color": "#a0aec0",
          "fontSize": 14,
          "lineHeight": 20,
        }
      }
    >
      Play with a friend over local WiFi or the internet
    </Text>
  </View>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "backgroundColor": "#0f3460",
        "borderRadius": 16,
        "marginBottom": 16,
        "opacity": 1,
        "padding": 20,
      }
    }
  >
    <Text
      style={
        {
          "fontSize": 36,
          "marginBottom": 8,
        }
      }
    >
      🎯
    </Text>
    <Text
      style={
        {
          "color": "#e2e8f0",
          "fontSize": 20,
          "fontWeight": "bold",
          "marginBottom": 4,
        }
      }
    >
      Drills
    </Text>
    <Text
      style={
        {
          "color": "#a0aec0",
          "fontSize": 14,
          "lineHeight": 20,
        }
      }
    >
      Practise opening theory and endgame technique
    </Text>
  </View>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "backgroundColor": "#0f3460",
        "borderRadius": 16,
        "marginBottom": 16,
        "opacity": 1,
        "padding": 20,
      }
    }
  >
    <Text
      style={
        {
          "fontSize": 36,
          "marginBottom": 8,
        }
      }
    >
      🧩
    </Text>
    <Text
      style={
        {
          "color": "#e2e8f0",
          "fontSize": 20,
          "fontWeight": "bold",
          "marginBottom": 4,
        }
      }
    >
      Tactics
    </Text>
    <Text
      style={
        {
          "color": "#a0aec0",
          "fontSize": 14,
          "lineHeight": 20,
        }
      }
    >
      Solve puzzles from your own game mistakes
    </Text>
  </View>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "marginTop": 8,
        "opacity": 1,
        "padding": 12,
      }
    }
  >
    <Text
      style={
        {
          "color": "#4299e1",
          "fontSize": 16,
        }
      }
    >
      📚 Game Library
    </Text>
  </View>
</View>
`;
